# catbox-rs

./: .gitignore  Cargo.toml  README.md
resources/shaders/: instance.frag  instance.vert  line_renderer.frag  shape_renderer.frag  shape_renderer.geom  shape_renderer.vert  simple.frag  simple.vert  simple_light.frag  simple_light.vert
src/: catbox.rs  main.rs  thread_pool.rs  types.rs
src-old/: ball.rs
src/graphics/: instance_mesh.rs  light.rs  line_renderer.rs  material.rs  mesh.rs  mesh_primitives.rs  mod.rs  render.rs  render_manager.rs  renderer.rs  shader.rs  shader_strings.rs  shaders.rs  shape_renderer.rs  single_mesh.rs  texture.rs  visual_material.rs
src/graphics/mesh/: builder.rs  mesh.rs  mod.rs  primitives.rs
src/render/: line_renderer.rs  mod.rs  shader.rs
src/simulation/: aabb.rs  ball.rs  bsp.rs  camera.rs  mod.rs  object.rs  quadtree.rs  simulation.rs  solver.rs  transform.rs  verlet_solver.rs
src/simulation/physical/: ball.rs
src/simulation/region/: aabb.rs  bsp.rs  mod.rs  quadtree.rs
src/window/: camera.rs  catbox.rs  input_helper.rs  mod.rs  viewport.rs  viewport_test.rs
