[package]
name = "catbox-rs"
version = "0.8.0"
edition = "2024"
readme = "README.md"
#license = "GPL-3"
license-file = "LICENSE"
repository = "https://github.com/CoffeeCatRailway/catbox-rs"
homepage = "https://github.com/CoffeeCatRailway/catbox-rs"
publish = false

[dependencies]
sdl3 = { version = "0.17.3", features = ["build-from-source"] }
glow = "0.16.0"
glam = "0.32.0"
bytemuck = { version = "1.25.0", features = ["derive"] }

dear-imgui-rs = { version = "0.10", features = ["glam"] }
dear-imgui-sdl3 = { version = "0.10" }
dear-imgui-glow = { version = "0.10" }

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
#log = "0.4.29"

[features]
default = []
multi-viewport = ["dear-imgui-rs/multi-viewport", "dear-imgui-sdl3/multi-viewport", "dear-imgui-glow/multi-viewport"]
