[package]
name = "catbox-rs"
version = "0.8.0"
edition = "2024"
readme = "README.md"
#license = "GPL-3"
license-file = "LICENSE"
repository = "https://github.com/CoffeeCatRailway/catbox-rs"
homepage = "https://github.com/CoffeeCatRailway/catbox-rs"
publish = false

[dependencies]
sdl3 = { version = "0.17", features = ["build-from-source"] }
glow = "0.16"
glam = { version = "0.32", features = ["bytemuck"] }
bytemuck = { version = "1.25", features = ["derive"] }
bool-flags = "0.1.1"

dear-imgui-rs = { git = "https://github.com/Latias94/dear-imgui-rs", tag = "v0.10.3", features = ["glam"] }
dear-imgui-sdl3 = { git = "https://github.com/Latias94/dear-imgui-rs", tag = "v0.10.3" }
dear-imgui-glow = { git = "https://github.com/Latias94/dear-imgui-rs", tag = "v0.10.3" }

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
#log = "0.4.29"

[features]
default = []
multi-viewport = ["dear-imgui-rs/multi-viewport", "dear-imgui-sdl3/multi-viewport", "dear-imgui-glow/multi-viewport"]
